--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Mubakid
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pkaruOFPYapiK64ibJ3+D5mJ8IWXDoI27tWm/ow5rFA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://sipp.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -50,3 +50,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TRIPAY_API_KEY=DEV-p33MbvkmPaJS4jMxBqgZJe4Vp5ebm9cgNa1hioNK
+TRIPAY_PRIVATE_KEY=Iw7ib-Aoi6B-Ghqh2-Dvhwf-vPwdR
+TRIPAY_MERCHANT_CODE=T7368
