--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "tata-js": "^0.1.5",
         "toastr": "^2.1.4"
     }
 }
