--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,7 @@
         "psr/simple-cache": "^1.0",
         "realrashid/sweet-alert": "^5.0",
         "simplesoftwareio/simple-qrcode": "~4",
-        "spatie/laravel-permission": "^5.5",
-        "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
