--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "psr/simple-cache": "^1.0",
         "realrashid/sweet-alert": "^5.0",
         "simplesoftwareio/simple-qrcode": "~4",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
