--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
+        "masbug/flysystem-google-drive-ext": "^2.2",
         "psr/simple-cache": "^1.0",
         "realrashid/sweet-alert": "^5.0",
         "simplesoftwareio/simple-qrcode": "~4",
+        "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
