--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.0.2",
         "barryvdh/laravel-dompdf": "^1.0",
         "guzzlehttp/guzzle": "^7.0",
+        "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
