--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "ssr": "mix && mix --mix-config=webpack.ssr.mix.js"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/server": "^0.1.0",
+        "@vue/server-renderer": "^3.2.37",
+        "autoprefixer": "10.4.5",
+        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^0.4.0",
         "tata-js": "^0.1.5",
-        "toastr": "^2.1.4"
+        "toastr": "^2.1.4",
+        "webpack-node-externals": "^3.0.0"
     }
 }
