--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.0.2",
         "barryvdh/laravel-dompdf": "^1.0",
+        "doctrine/dbal": "^3.3",
         "guzzlehttp/guzzle": "^7.0",
         "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image": "^2.7",
@@ -24,6 +25,7 @@
         "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.5",
+        "tightenco/ziggy": "^1.4",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
